# mypt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.claude/: settings.json
docs/designs/: demoproject_design.md
docs/specs/: demoproject_spec.md  setup_spec.md
scripts/: setup.sh  update_project_name.py
src/demo/: __init__.py  __main__.py  cli.py
src/demo/core/: text_processor.py
src/demo/utils/: logging_config.py  profiling.py
tests/property/: test_text_processor_prop.py
tests/unit/: test_cli.py  test_text_processor.py
